# Stim

./: .clang-format  .dir-locals.el  .editorconfig  .gitignore  .markdownlintrc  .vimrc  BUILD  CITATION.cff  CMakeLists.txt  CMakeLists.txt.in  CONTRIBUTING.md  GATES.md  H_AND_L_DISTANCE3.md  MANIFEST.in  MODULE.bazel  PARITY_CHECK_MATRIX_ANALYSIS.md  README.md  README_COMMAND_LINE_USAGE.md  README_FILE_DETECTOR_ERROR_MODEL.md  README_FILE_FORMAT_CIRCUIT.md  README_FILE_FORMAT_DETECTOR_ERROR_MODEL.md  README_GATES.md  README_STIM_CIRCUIT_FILE_FORMAT.md  SUPPORT.md  Untitled.ipynb  WORKSPACE  aligned_bits256.cc  aligned_bits256.h  aligned_bits256.test.cc  arg_parse.cc  arg_parse.test.cc  bit_mat.cc  bit_mat.h  bit_ptr.cc  bit_ptr.h  bit_ptr.test.cc  chp_sim.cc  chp_sim.h  chp_sim.test.cc  chp_sim_record.cc  (+52 more)
.github/: SECURITY.md
.github/workflows/: ci.yml  citation-updater.yaml  release.yml
dev/: README.md  canvas_with_texture_for_3d_diagrams.html  clean_build_files.sh  compile_crumble_into_cpp_string_file.sh  compile_crumble_into_single_html_page.sh  doctest_proper.py  gen_known_gates_for_js.sh  gen_sinter_api_reference.py  gen_stim_api_reference.py  gen_stim_stub_file.py  make_logo.html  overwrite_dev_versions_with_date.py  regen_crumble_cpp_resource.sh  regen_crumble_html.sh  regen_crumble_to_cpp_string.sh  regen_crumble_to_cpp_string_write_to_stdout.sh  regen_docs.sh  regen_file_lists.sh  regen_texture_to_cpp_base64_string.sh  texture_to_cpp_base64_string.sh  util_gen_stub_file.py
doc/: circuit_data_references.md  developer_documentation.md  file_format_dem_detector_error_model.md  file_format_stim_circuit.md  gates.md  getting_started.ipynb  python_api_reference_vDev.md  regen_docs_not_portable.sh  result_formats.md  sinter_api.md  sinter_command_line.md  stim.pyi  usage_command_line.md
file_lists/: benchmark_files  perf_files  perf_files.out  pybind_files  pybind_files.out  python_api_files  source_files_no_main  source_files_no_main.out  test_files  test_files.out
glue/cirq/: README.md  setup.py
glue/crumble/: README.md  crumble.css  crumble.html  main.html  main.js  package.json  pyproject.toml  run_tests_headless.js
glue/crumble/base/: describe.js  describe.test.js  equate.js  equate.test.js  history_pusher.js  obs.js  obs.test.js  revision.js  revision.test.js  seq.js  seq.test.js
glue/crumble/circuit/: circuit.js  circuit.test.js  layer.js  layer.test.js  operation.js  pauli_frame.js  pauli_frame.test.js  propagated_pauli_frames.js  propagated_pauli_frames.test.js  propagated_pauli_frames.tostring.test.js
glue/crumble/crumpy/: __init__.py
glue/crumble/draw/: config.js  draw_util.js  main_draw.js  main_draw.test.js  state_snapshot.js  timeline_viewer.js
glue/crumble/editor/: editor_state.js  editor_state.test.js  sync_url_to_state.js
glue/crumble/gates/: gate.js  gate_draw_util.js  gateset.js  gateset.test.js  gateset_controlled_paulis.js  gateset_demolition_measurements.js  gateset_hadamard_likes.js  gateset_markers.js  gateset_mpp.js  gateset_pair_measurements.js  gateset_paulis.js  gateset_quarter_turns.js  gateset_resets.js  gateset_solo_measurements.js  gateset_sqrt_pauli_pairs.js  gateset_swaps.js  gateset_third_turns.js
glue/crumble/keyboard/: chord.js  chord.test.js  toolbox.js
glue/crumble/test/: generated_gate_name_list.test.js  generated_gate_name_list.txt  test.html  test_import_all.js  test_main.js  test_util.js  test_util.test.js
glue/crumpy/: README.md  (+3 more)
glue/stimside/: README.md  pyproject.toml
glue/stimside/examples/: rotated_surface_code.py
glue/stimside/src/stimside/: sampler_flip.py  sampler_flip_test.py  sampler_tableau.py  sampler_tableau_test.py  simulator_flip.py  simulator_flip_test.py  simulator_tableau.py  simulator_tableau_test.py
glue/stimside/src/stimside/op_handlers/: abstract_op_handler.py
glue/stimside/src/stimside/op_handlers/leakage_handlers/: README.md  common_parsing.py  leakage_tag_parsing_flip.py  leakage_tag_parsing_flip_test.py  leakage_tag_parsing_tableau.py  leakage_tag_parsing_tableau_test.py  leakage_tag_parsing_unified.py  leakage_uint8_flip.py  leakage_uint8_flip_test.py  leakage_uint8_tableau.py  leakage_uint8_tableau_test.py  tag_registry.py
glue/stimside/src/stimside/op_handlers/leakage_handlers/leakage_parameters/: __init__.py  leakage_conditioning.py  leakage_controlled_error.py  leakage_measurement.py  leakage_transition_1.py  leakage_transition_2.py  leakage_transition_z.py
glue/stimside/src/stimside/util/: alias_table.py  alias_table_test.py  known_states.py  known_states_test.py  numpy_types.py
src/: aligned_bits256.cc  arg_parse.cc  arg_parse.h  arg_parse.test.cc  benchmark_main.perf.cc  benchmark_util.h  benchmark_util.perf.cc  bit_mat.cc  bit_mat.h  bit_mat.test.cc  circuit.cc  circuit.h  circuit.perf.cc  circuit.test.cc  circuit_instruction.cc  circuit_instruction.h  circuit_pybind_test.py  common_circuits.cc  common_circuits.h  common_circuits.test.cc  gate_help.cc  gate_help.h  help.cc  help.h  main.cc  main.perf.cc  main_helper.cc  main_helper.h  main_helper.test.cc  main_namespaced.cc  main_namespaced.h  main_namespaced.perf.cc  main_namespaced.test.cc  pauli_string.cc  pauli_string.h  pauli_string.test.cc  probability_util.benchmark.cc  probability_util.cc  probability_util.h  probability_util.perf.cc  (+29 more)
test/: aligned_bits256.test.cc  arg_parse.test.cc  bit_mat.test.cc  bit_ptr.test.cc  circuit.test.cc  pauli_string.test.cc  probability_util.test.cc  program_frame.test.cc  sim_bulk_pauli_frame.test.cc  sim_tableau.test.cc  sim_vector.test.cc  simd_util.test.cc  tableau.test.cc
testdata/: circuit_all_ops_3d.gltf  classical_feedback.gltf  collapsing.gltf  detector_pseudo_targets.gltf  empty_match_graph.gltf  lattice_surgery_cnot.gltf  match_graph_no_coords.gltf  match_graph_repetition_code.gltf  match_graph_surface_code.gltf  measurement_looping.gltf  noise_gates_1.gltf  noise_gates_2.gltf  noise_gates_3.gltf  repeat.gltf  repetition_code.gltf  single_qubits_gates.gltf  surface_code.gltf  test_circuit_all_ops.gltf  test_replacer.py  tick.gltf  two_qubits_gates.gltf
(+1273 files in other folders)
